<resources>
    <string name="app_name">Dice App</string>
    <string name="mr_king_dice_game">Mr. King Dice Game</string>
    <string name="button">Button</string>
    <string name="mr_king_dice">Mr. King Dice</string>
    <string name="fundo">fundo</string>
    <string name="d6">D6</string>
    <string name="cuphead_logo">cuphead logo</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="dados">dados</string>
</resources>