<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:contentDescription="@string/fundo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:contentDescription="@string/mr_king_dice"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clipart2098398"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:background="@color/green"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/mr_king_dice_game"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/purple"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="1" />

    <Button
        android:id="@+id/buttonD6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="180dp"
        android:padding="10dp"
        android:text="@string/d6"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonD12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDado"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonD12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/d12"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonD20"
        app:layout_constraintStart_toEndOf="@+id/buttonD6"
        app:layout_constraintTop_toBottomOf="@+id/textDado"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonD20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="36dp"
        android:padding="10dp"
        android:text="@string/d20"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonD12"
        app:layout_constraintTop_toBottomOf="@+id/textDado"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/cuphead_logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD12"
        app:srcCompat="@drawable/kindpng_7230279_1" />

    <ImageView
        android:id="@+id/textResultado"
        android:layout_width="129dp"
        android:layout_height="166dp"
        android:contentDescription="@string/dados"
        app:layout_constraintBottom_toTopOf="@+id/buttonD12"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDado"
        tools:srcCompat="@drawable/d6_1" />

</androidx.constraintlayout.widget.ConstraintLayout>